# backend-fastapi-practicing

./: Dockerfile  README.md  pyproject.toml  requirements.txt
