[tool.poetry]
name = "backend-fastapi-practicing"
version = "0.1.0"
description = ""
authors = ["Clebiano da Costa Sá <clebiano@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
pydantic = "^1.8.2"
uvicorn = "^0.16.0"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
